# pulse

./: Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: ci.yml
examples/: current.json  sample.snapshot.json
src/: lib.rs  main.rs  verdict.rs  watch.rs
src/snapshot/: mod.rs  windows.rs
tests/: cli.rs
