[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "Pulse — blue-team host telemetry tripwire: snapshot the process tree + TCP connection table and report drift (new processes, new external connections, unexpected parents)."
license = "MIT"
repository = "https://github.com/JUS7205/pulse"
readme = "README.md"
keywords = ["blue-team", "telemetry", "tripwire", "edr", "process"]
categories = ["command-line-utilities", "os", "security"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Win32 FFI is only needed when targeting Windows. On other platforms the
# snapshot module honestly returns an empty snapshot (no fabrication), so the
# diff/verdict logic — which is platform-independent — still builds and tests.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[profile.release]
opt-level = 3
